error_msgs.txt
  File "programs/python/toy_programs/output_programs/errors/factorial_0_error.py", line 1
    Line no. 2 :  = missing
          ^
SyntaxError: invalid syntax
